--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,94 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2020-05-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2169463'>[Payments] Use org.chromium.url.GURL class -3-</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-05-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2187990'>Componentize EditableOption.java</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-05-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2190056'>Convert enum to enum class for Axis of BoxLayout</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-05-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2172269'>Convert enum to enum class for GridLayout::SizeType</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-05-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2152338'>Remove * from supported_origins</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-05-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2183971'>Migrate CSP and security code to use RequestDestination</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-05-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2174249'>Add mapping of payment method names to the id of the apps</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-04-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2167748'>Small refactor in DarkModeColorFilter.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-04-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2154644'>PasswordManager: Use |typed_value| as a fallback if |value| is empty</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-04-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2141472'>[Payments] Use org.chromium.url.GURL class -2-</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-04-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2134100'>Disable animation in AutofillUiTest</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-04-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2126333'>[Payments] Use org.chromium.url.GURL class</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-04-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2129455'>Add a new RequestDestination field in blink::mojom::ResourceTimingInfo</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-04-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2127994'>Convert enum to enum class for FocusCycleWrappingBehavior</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-04-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2128033'>Convert enum to enum class for views::SliderChangeReason</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-03-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2108240'>Remove DeprecatedEqualIgnoringCase in renderer/core/html</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-03-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2106708'>Add a new RequestDestination field in content::mojom::BeginNavigationParams</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-03-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2108416'>Add a separate element role for list item markers.</a></td><td>prashant.n</td></tr>
+<tr><td>2020-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2120840'>Convert enum to enum class for TableView::AdvanceDirection</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2120837'>Convert enum to enum class for views::LayoutFadeType</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-03-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2102032'>Reland "Clean up the AndroidSetupSearchEngine feature flag"</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-03-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2105265'>Remove DeprecatedEqualIgnoringCase in renderer/core/css</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-03-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2094055'>Fix up incorrect size of &lt;svg:image&gt; with a SVG image without intrinsic size</a></td><td>Hyunjune</td></tr>
+<tr><td>2020-03-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2108202'>Remove DeprecatedEqualIgnoringCase in renderer/core/editing</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-03-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2108204'>Remove DeprecatedEqualIgnoringCase in renderer/core/testing</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-03-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2081727'>Merge the getters/setters for force dark mode.</a></td><td>v.paturi</td></tr>
+<tr><td>2020-03-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2102032'>Revert "Clean up the AndroidSetupSearchEngine feature flag"</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-03-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2102032'>Clean up the AndroidSetupSearchEngine feature flag</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-03-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2100947'>WebGPU: Rename BindGroup[Layout]Binding to -Entry</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-03-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1940002'>PaymentRequest: Change PaymentAddressInit to AddressInit</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-03-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2099685'>PaymentRequest: Clean-up unnecessary code</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-03-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2086354'>Change SpecialStoragePolicy functions to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-03-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2076752'>Remove Profile.RemoveUserWarningStatsTime histograms.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-03-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2074842'>Change FileSystemQuotaUtil functions to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-03-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2074845'>Remove History.ClearBrowsingData.SpannableStringAppliedCorrectly.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-03-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2007321'>Change functions Next() in file_system/ to use base::Optional&lt;url::Origin&gt;.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-03-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2081712'>Feed: Fix build errors under `enable_feed_in_chrome = false`</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2071522'>Change DeleteDataForOriginOnFileTaskRunner to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-02-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2067771'>[Android][Autofill] Check and recreate Android view before usage in Card Name Fix Flow</a></td><td>Synthia Islam</td></tr>
+<tr><td>2020-02-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1981952'>WaitForLoadStop in browsertests of chrome/browser folder not checking success of page loads</a></td><td>Synthia Islam</td></tr>
+<tr><td>2020-02-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2071168'>Change SandboxFileSystemBackendDelegate members to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-02-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2007322'>Change DeleteOriginDataOnFileTaskRunner to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-02-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2062017'>Convert enum to enum class for InkDropHighlight::AnimationType</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-02-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2050411'>Do element role override only if dark mode is active.</a></td><td>prashant.n</td></tr>
+<tr><td>2020-02-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2046944'>Change FileSystemContext::CreateCrackedFileSystemURL to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2041831'>Change CreateOriginTypeDirectory and GetRootPath to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2041675'>Change CopyOrMove* unit test classes to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2041670'>Change CopyFileSystem and RecalculateUsage to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2040977'>Change FileSystemContext::OpenPluginPrivateFileSystem to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2040801'>Change FileSystemContext::DeleteFileSystem to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2038811'>Change FileSystemContext::OpenFileSystem to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1946476'>Fixed unlimited memory growth when inspector is connected.</a></td><td>Adam Labuda</td></tr>
+<tr><td>2020-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2021564'>WebGPU: Change GPUExtensions dictionary into array of GPUExtensionName</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2035516'>Change CreateExternalFileSystemURL to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2038913'>Change GetBaseDirectoryForOriginAndType to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2038932'>Change OpenFileSystem to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-02-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2032556'>Change GetOriginUsageOnFileTaskRunner to use url::Origin</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2029472'>Convert VLOG -&gt; DVLOG in device/bluetooth</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2026854'>Convert VLOG -&gt; DVLOG in device/bluetooth/dbus</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2024251'>Convert VLOG -&gt; DVLOG in device/bluetooth/bluez</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2023713'>Remove foreign fetch event types</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2019422'>Use FloatPoint instead of FloatSize for ClassificationKey.</a></td><td>v.paturi</td></tr>
+<tr><td>2020-01-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2014213'>Remove unused variable at credit_card_save_manager.h</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-01-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1844914'>Changing the return type of FFTFrame::RealData()</a></td><td>Imranur Rahman</td></tr>
+<tr><td>2020-01-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2007309'>[IdentityManager] Fix to show all accounts if dice is enabled</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1895270'>Decouple surface management code in CVRV.</a></td><td>Shobhit Goel</td></tr>
+<tr><td>2020-01-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2004187'>Change PluginPrivateFileSystemBackend functions to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2006902'>Change SandboxFileSystemBackendDelegate functions to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2007088'>Change SandboxFileSystemTestHelper to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1989435'>desktop-pwas: Use app name if available to generate the icon</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1986646'>Enable MapRectReverse() for a blur filter to map backward</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2004356'>Change GetUsageCachePathForOriginAndType to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1991043'>[IdentityManager] Return one account from GetAccountForDicePromos()</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1997435'>Change DeleteForOrigin and DeleteCacheStorage to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-01-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1999901'>Change DOMStorageContextWrapper functions to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-01-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1996118'>Convert enum to enum class for Widget::MoveLoopSource</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-01-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1991069'>Change CreateQuotaReservationOnFileTaskRunner to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-01-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1990889'>Change ObfuscatedFileUtil to use url::Origin.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1916527'>input type=date with max below min should not allow date to be set</a></td><td>Synthia Islam</td></tr>
+<tr><td>2020-01-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1986657'>WebGPU: Define GPUMappedBuffer more strictly</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-01-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1984790'>Remove "arch=" flag from kComponentDownloadUrl</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1982513'>Rename ServiceWorkerNavigationHandle to ServiceWorkerMainResourceHandle.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-01-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1985638'>Clean up HasEmptyOrInvalidFilter naming</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1981515'>Change ChooseFileSystemEntriesType to be lowercase, dash-delimited</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2019-12-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1982511'>Rename toYosemiteFontWeight to toFontWeight.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2019-12-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1975388'>WebGPU: Remove createBufferMappedAsync</a></td><td>Jinho Bang</td></tr>
+<tr><td>2019-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1868753'>[Geometry] Add [NewObject] to matrixTransform</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2019-12-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1961345'>Convert enum to enum class for MenuItemView::Type</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-11-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1936693'>WebGPU: Add [SameObject] to several more attributes</a></td><td>Jinho Bang</td></tr>
 <tr><td>2019-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1924095'>Convert enum to enum class for InitParams::WindowOpacity</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2019-11-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1911881'>Removing redundant comments and extern variable of Cleaning up RecurrentInterstitialFeature flag.</a></td><td>Abul Hasan Md Osama</td></tr>
