--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2020-06-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2102388'>Implement inverted color cache in DarkModeFilter.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-05-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2169463'>[Payments] Use org.chromium.url.GURL class -3-</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2020-05-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2187990'>Componentize EditableOption.java</a></td><td>DongJun Kim</td></tr>
 <tr><td>2020-05-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2190056'>Convert enum to enum class for Axis of BoxLayout</a></td><td>Hwanseung Lee</td></tr>
