--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2020-06-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2170748'>Remove is_svg from image classifier features in dark mode.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-06-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2169489'>Simplify image classifiers in dark mode.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-06-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2167804'>Use SkColor in dark mode.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-06-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2102388'>Implement inverted color cache in DarkModeFilter.</a></td><td>Prashant Nevase</td></tr>
