--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2020-06-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2182101'>Replace blink::Vector by std::vector.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-06-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2182692'>Replace blink::FloatRect by SkRect.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-06-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2182098'>Replace blink::Image by cc::PaintImage.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-06-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2181242'>Move dark mode image classifier cache out of blink::Image.</a></td><td>Prashant Nevase</td></tr>
