--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2020-06-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2222773'>Initial decoupling of !is_android and enable_extension build flags</a></td><td>Winston Chen</td></tr>
+<tr><td>2020-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2186902'>Simplify DarkModeImageClassifier.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-06-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2249247'>Remove useless security check.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2020-06-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2246040'>Fix regression caused by "Replace blink::Image by cc::PaintImage".</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-06-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2182101'>Replace blink::Vector by std::vector.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-06-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2182692'>Replace blink::FloatRect by SkRect.</a></td><td>Prashant Nevase</td></tr>
