--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,44 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2020-09-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2400581'>Convert enum to enum class for BoundsAnimationMode</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-09-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2392290'>Add finalizers to Web Payment Java objects that own native objects</a></td><td>Dongjun Kim</td></tr>
+<tr><td>2020-09-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2386682'>Rename LenientSetter to LegacyLenientSetter.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-09-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2368622'>Rename NoInterfaceObject to LegacyNoInterfaceObject.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2377037'>Organize dark mode virtual tests.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-08-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2371146'>Rename LenientThis to LegacyLenientThis.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2214731'>Remove blink dependency in DarkModeImageClassifier.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1312177'>Rename inline_box_traversal.h|cc to bidi_adjustment.h|cc</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2212226'>Remove blink dependency in Lab color space.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-08-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2377165'>Rename |world| to |world_for_csp|</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2376928'>Rename GetText() to GetTextState().</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2359880'>Rename OverrideBuiltins to LegacyOverrideBuiltins.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2368935'>Fix crash in DarkModeImageClassifier::GetSamples().</a></td><td>prashant.n</td></tr>
+<tr><td>2020-08-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2323441'>Remove DarkModePagePolicy.</a></td><td>prashant.n</td></tr>
+<tr><td>2020-08-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2364312'>Rename TreatNonObjectAsNull to LegacyTreatNonObjectAsNull.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2364383'>Remove old code in DarkModeImageClassifier.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2351603'>Rename Unforgeable to LegacyUnforgeable.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2339209'>Remove per-method-can-make-payment-quota</a></td><td>Dongjun Kim</td></tr>
+<tr><td>2020-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2354126'>Rename *ShortcutInfos() to *ShortcutsMenuItemInfos().</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2352251'>Remove dark mode element roles added for image.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-08-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2351099'>Rename GetAppShortcutInfos to GetAppShortcutsMenuItemInfos.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2345824'>Convert enum to enum class for InitialFocusStateOnMousePress</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2344441'>Rename SetShortcutInfos to SetShortcutsMenuItemInfos.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2335716'>Rename shortcut_infos to shortcuts_menu_item_infos.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2344426'>Fix up a crash relied on 'keySplines' of &lt;animate*&gt;</a></td><td>Hyunjune</td></tr>
+<tr><td>2020-08-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2339714'>[Fixup] discord web app doesn't work because of getPointAtLength</a></td><td>Hyunjune</td></tr>
+<tr><td>2020-08-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2336343'>Rename SignallingReceiver to SignalingReceiver.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2333912'>Check all usage of |factory| in RegisterSchemeFactory().</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2331762'>Rename SignallingSender to SignalingSender</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2332023'>Remove the check of |info_| in AppCacheURLLoader::NotifyCompleted.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-08-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2328446'>Remove the check of scrollable_area in UpdateScrollingContentsLayer.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-07-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2318893'>Remove the check of LocalRootImpl() in HandleInputEvent().</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2321908'>[Autofill] remove redundant code</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1952628'>[Autofill] Add Troy card for autofill.</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-07-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2313396'>Convert enum to enum class for SizeCalculationType</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-07-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2291516'>[Payment] Componentize Android Web Payment layouts</a></td><td>Dongjun Kim</td></tr>
+<tr><td>2020-07-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2147168'>When SVGGeometryElement.getPointAtLength is called with with non-rendered, throw exception</a></td><td>Hyunjune</td></tr>
+<tr><td>2020-07-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2246126'>Move GetAllPaymentApps to a different class</a></td><td>DongJun Kim</td></tr>
 <tr><td>2020-06-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2222773'>Initial decoupling of !is_android and enable_extension build flags</a></td><td>Winston Chen</td></tr>
 <tr><td>2020-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2186902'>Simplify DarkModeImageClassifier.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-06-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2249247'>Remove useless security check.</a></td><td>Zhuoyu Qian</td></tr>
