--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2020-09-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2409879'>Remove duplicate web tests for dark mode images.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-09-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2352301'>Clean up "kPassiveMixedContentWarning" feature</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2020-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2404513'>Rename LegacyOverrideBuiltins to LegacyOverrideBuiltIns.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2020-09-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2400581'>Convert enum to enum class for BoundsAnimationMode</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2020-09-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2392290'>Add finalizers to Web Payment Java objects that own native objects</a></td><td>Dongjun Kim</td></tr>
