--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2020-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2398033'>Change two menus inside of privacy to ChromeSwitchPreference</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2020-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2392193'>Change "Auto Sign-In" menu to ChromeSwitchPreference</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2020-09-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2416188'>Adding self to dark mode module watch list.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-09-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2409879'>Remove duplicate web tests for dark mode images.</a></td><td>Prashant Nevase</td></tr>
