--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2020-09-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2389862'>Replace SkRect by SkIRect in dark mode module.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-09-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2382990'>Make DarkModeImageClassifier apis to work with SkPixmap.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-09-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2368660'>Refactoring RespondWithCallback class</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-09-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2282824'>Implement WebContentsUserData in PaymentAppProviderImpl</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-09-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2421978'>Rename lab_color_space to dark_mode_lab_color_space.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2398033'>Change two menus inside of privacy to ChromeSwitchPreference</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2020-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2392193'>Change "Auto Sign-In" menu to ChromeSwitchPreference</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2020-09-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2416188'>Adding self to dark mode module watch list.</a></td><td>Prashant Nevase</td></tr>
