--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="main-option">
                 <a href="https://code.google.com/p/chromium/issues/list?can=2&q=label%3AType-Bug-Regression+Status%3DAvailable"><img src="images/btn8.svg" class="image-icon"></a>
-                <p>Available <a href="https://code.google.com/p/chromium/issues/list?can=2&q=label%3AType-Bug-Regression+Status%3DAvailable">bugs that are regressions</a> (use to work, now broken)</p>
+                <p>Available <a href="https://code.google.com/p/chromium/issues/list?can=2&q=label%3AType-Bug-Regression+Status%3DAvailable">bugs that are regressions</a> (used to work, now broken)</p>
             </div>
 
 
